# vibe-and-play

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  terminal_smoke.yml
.github/workflows/: package-dry-run.yml  publish-npm.yml
claude-marketplace/.claude-plugin/: marketplace.json
claude-marketplace/plugins/vibemud/.claude-plugin/: plugin.json
claude-marketplace/plugins/vibemud/commands/: mud.md
claude-marketplace/plugins/vibemud/hooks/: hooks.json
claude-marketplace/plugins/vibemud/scripts/: vibemud-claude.sh  vibemud-context-hook.py
crates/vibemud-cli/: Cargo.toml
crates/vibemud-cli/src/: lib.rs
crates/vibemud-core/: Cargo.toml
crates/vibemud-core/src/: lib.rs
crates/vibemud-db/: Cargo.toml
crates/vibemud-db/src/: lib.rs
crates/vibemud-hud/: Cargo.toml
crates/vibemud-hud/src/: lib.rs
crates/vibemud-integrations/: Cargo.toml
crates/vibemud-integrations/src/: lib.rs
crates/vibemud-runtime/: Cargo.toml
crates/vibemud-runtime/src/: lib.rs
npm/: README.md  package.json
npm/platform-packages/@vibemud/native-darwin-arm64/: README.md  package.json
npm/platform-packages/@vibemud/native-darwin-x64/: README.md  package.json
npm/platform-packages/@vibemud/native-linux-arm64-gnu/: README.md  package.json
npm/platform-packages/@vibemud/native-linux-x64-gnu/: README.md  package.json
npm/platform-packages/@vibemud/native-linux-x64-gnu/scripts/: postinstall.js
npm/platform-packages/@vibemud/native-win32-arm64-msvc/: README.md  package.json
npm/platform-packages/@vibemud/native-win32-x64-msvc/: README.md  package.json
npm/scripts/: check-pack-contents.js  check-release-metadata.js  collect-native-artifacts.js  postinstall.js  stage-packages.js  verify-native-checksums.js
npm/test/: resolve.test.js
scripts/: install-claude-plugin.sh  install.ps1  install.sh  uninstall-claude-plugin.sh
