[package]
name = "vibemud-db"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
uuid.workspace = true
vibemud-core = { path = "../vibemud-core" }

[dev-dependencies]
tempfile.workspace = true
