[package]
name = "vibemud-runtime"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
time.workspace = true
vibemud-core = { path = "../vibemud-core" }
vibemud-db = { path = "../vibemud-db" }
vibemud-hud = { path = "../vibemud-hud" }

[dev-dependencies]
tempfile.workspace = true
